# regetopt

./: CMakeLists.txt  README.md  regetopt.c  regetopt.pc.in  regetopt_static.pc.in  sample.c
include/: regetopt.h
tests/: CMakeLists.txt  mixed.cc  need_reorder.cc  optional_argument.cc  test_case_1.cc  test_case_2.cc  with_argument.cc
